--- a/first_try.ipynb
+++ b/first_try.ipynb
@@ -181,6 +181,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed9dc84e",
+   "metadata": {},
+   "source": [
+    "The following command makes sense to be executed in the Terminal of Jupyter. Switch to the resp. Group 36 folder first.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d56e195",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd home/jovyan/groups/194.035-2025S/Group_36/Group_36/Rec-Sys-Challenge-Github-Repo/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d490e0f7",
@@ -212,7 +230,8 @@
     }
    ],
    "source": [
-    "!cd /home/jovyan/groups/194.035-2025S/Group_36/Group_36/Rec-Sys-Challenge-Github-Repo/ && python -m training_pipeline.train --data-dir /home/jovyan/shared/194.035-2025S/data/group_project/data --embeddings-dir /home/jovyan/groups/194.035-2025S/Group_36/Group_36/embeddings --tasks churn propensity_category propensity_sku --log-name exp_20250401 --accelerator gpu --devices auto --disable-relevant-clients-check"
+    "python -m training_pipeline.train --data-dir /home/jovyan/shared/194.035-2025S/data/group_project/data --embeddings-dir /home/jovyan/groups/194.035-2025S/Group_36/Group_36/embeddings --tasks churn propensity_category propensity_sku --log-name exp_20250401 --accelerator gpu --devices auto --disable-relevant-clients\n",
+    "-check --score-dir /home/jovyan/groups/194.035-2025S/Group_36/Group_36/scores --neptune-project /home/jovyan/groups/194.035-2025S/Group_36/Group_36/neptune"
    ]
   }
  ],
