3 approaches for creating embeddings
1. contrastive (code on local)
2. contrastive+weightedrecency
3. contrastive+weightedrecency+sbert

All working with training/evaluation is done. Scores were also uploaded.
embeddings are currently not part of the repository, shared individually on WhatsApp.

I will upload zipped version separately later.

--- a/Ibrar.ipynb
+++ b/Ibrar.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "1f5ce8af-a34a-4177-81aa-5e85602c2a01",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,8 @@
       "ERROR: ld.so: object '/opt/conda/lib/libmkl_core.so' from LD_PRELOAD cannot be preloaded (cannot open shared object file): ignored.\n",
       "ERROR: ld.so: object '/opt/conda/lib/libmkl_intel_lp64.so' from LD_PRELOAD cannot be preloaded (cannot open shared object file): ignored.\n",
       "ERROR: ld.so: object '/opt/conda/lib/libmkl_intel_thread.so' from LD_PRELOAD cannot be preloaded (cannot open shared object file): ignored.\n",
-      "Requirement already satisfied: sentence-transformers in /opt/conda/lib/python3.11/site-packages (4.1.0)\n",
+      "Collecting sentence-transformers\n",
+      "  Using cached sentence_transformers-4.1.0-py3-none-any.whl.metadata (13 kB)\n",
       "Requirement already satisfied: transformers<5.0.0,>=4.41.0 in /opt/conda/lib/python3.11/site-packages (from sentence-transformers) (4.45.1)\n",
       "Requirement already satisfied: tqdm in /opt/conda/lib/python3.11/site-packages (from sentence-transformers) (4.66.5)\n",
       "Requirement already satisfied: torch>=1.11.0 in /opt/conda/lib/python3.11/site-packages (from sentence-transformers) (2.1.2+cu121)\n",
@@ -124,7 +125,10 @@
       "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.11/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (3.10)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/lib/python3.11/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2.2.3)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.11/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2025.1.31)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /opt/conda/lib/python3.11/site-packages (from sympy->torch>=1.11.0->sentence-transformers) (1.3.0)\n"
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /opt/conda/lib/python3.11/site-packages (from sympy->torch>=1.11.0->sentence-transformers) (1.3.0)\n",
+      "Using cached sentence_transformers-4.1.0-py3-none-any.whl (345 kB)\n",
+      "Installing collected packages: sentence-transformers\n",
+      "Successfully installed sentence-transformers-4.1.0\n"
      ]
     }
    ],
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "33ad3ce2-77de-4b4c-bdac-4f8f64f1a955",
    "metadata": {},
    "outputs": [
@@ -153,9 +157,9 @@
       "ERROR: ld.so: object '/opt/conda/lib/libmkl_intel_lp64.so' from LD_PRELOAD cannot be preloaded (cannot open shared object file): ignored.\n",
       "ERROR: ld.so: object '/opt/conda/lib/libmkl_intel_thread.so' from LD_PRELOAD cannot be preloaded (cannot open shared object file): ignored.\n",
       "Collecting tf-keras\n",
-      "  Downloading tf_keras-2.19.0-py3-none-any.whl.metadata (1.8 kB)\n",
+      "  Using cached tf_keras-2.19.0-py3-none-any.whl.metadata (1.8 kB)\n",
       "Collecting tensorflow<2.20,>=2.19 (from tf-keras)\n",
-      "  Downloading tensorflow-2.19.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.1 kB)\n",
+      "  Using cached tensorflow-2.19.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.1 kB)\n",
       "Requirement already satisfied: absl-py>=1.0.0 in /opt/conda/lib/python3.11/site-packages (from tensorflow<2.20,>=2.19->tf-keras) (2.2.2)\n",
       "Requirement already satisfied: astunparse>=1.6.0 in /opt/conda/lib/python3.11/site-packages (from tensorflow<2.20,>=2.19->tf-keras) (1.6.3)\n",
       "Requirement already satisfied: flatbuffers>=24.3.25 in /opt/conda/lib/python3.11/site-packages (from tensorflow<2.20,>=2.19->tf-keras) (25.2.10)\n",
@@ -173,12 +177,12 @@
       "Requirement already satisfied: wrapt>=1.11.0 in /opt/conda/lib/python3.11/site-packages (from tensorflow<2.20,>=2.19->tf-keras) (1.17.2)\n",
       "Requirement already satisfied: grpcio<2.0,>=1.24.3 in /opt/conda/lib/python3.11/site-packages (from tensorflow<2.20,>=2.19->tf-keras) (1.65.5)\n",
       "Collecting tensorboard~=2.19.0 (from tensorflow<2.20,>=2.19->tf-keras)\n",
-      "  Downloading tensorboard-2.19.0-py3-none-any.whl.metadata (1.8 kB)\n",
+      "  Using cached tensorboard-2.19.0-py3-none-any.whl.metadata (1.8 kB)\n",
       "Requirement already satisfied: keras>=3.5.0 in /opt/conda/lib/python3.11/site-packages (from tensorflow<2.20,>=2.19->tf-keras) (3.9.2)\n",
       "Requirement already satisfied: numpy<2.2.0,>=1.26.0 in /opt/conda/lib/python3.11/site-packages (from tensorflow<2.20,>=2.19->tf-keras) (1.26.4)\n",
       "Requirement already satisfied: h5py>=3.11.0 in /opt/conda/lib/python3.11/site-packages (from tensorflow<2.20,>=2.19->tf-keras) (3.11.0)\n",
       "Collecting ml-dtypes<1.0.0,>=0.5.1 (from tensorflow<2.20,>=2.19->tf-keras)\n",
-      "  Downloading ml_dtypes-0.5.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (21 kB)\n",
+      "  Using cached ml_dtypes-0.5.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (21 kB)\n",
       "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in /opt/conda/lib/python3.11/site-packages (from tensorflow<2.20,>=2.19->tf-keras) (0.37.1)\n",
       "Requirement already satisfied: wheel<1.0,>=0.23.0 in /opt/conda/lib/python3.11/site-packages (from astunparse>=1.6.0->tensorflow<2.20,>=2.19->tf-keras) (0.44.0)\n",
       "Requirement already satisfied: rich in /opt/conda/lib/python3.11/site-packages (from keras>=3.5.0->tensorflow<2.20,>=2.19->tf-keras) (14.0.0)\n",
@@ -195,15 +199,11 @@
       "Requirement already satisfied: markdown-it-py>=2.2.0 in /opt/conda/lib/python3.11/site-packages (from rich->keras>=3.5.0->tensorflow<2.20,>=2.19->tf-keras) (3.0.0)\n",
       "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /opt/conda/lib/python3.11/site-packages (from rich->keras>=3.5.0->tensorflow<2.20,>=2.19->tf-keras) (2.18.0)\n",
       "Requirement already satisfied: mdurl~=0.1 in /opt/conda/lib/python3.11/site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow<2.20,>=2.19->tf-keras) (0.1.2)\n",
-      "Downloading tf_keras-2.19.0-py3-none-any.whl (1.7 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m37.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading tensorflow-2.19.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (644.9 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m644.9/644.9 MB\u001b[0m \u001b[31m41.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading ml_dtypes-0.5.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.7 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.7/4.7 MB\u001b[0m \u001b[31m46.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading tensorboard-2.19.0-py3-none-any.whl (5.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.5/5.5 MB\u001b[0m \u001b[31m39.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: ml-dtypes, tensorboard, tensorflow, tf-keras\n",
+      "Using cached tf_keras-2.19.0-py3-none-any.whl (1.7 MB)\n",
+      "Using cached tensorflow-2.19.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (644.9 MB)\n",
+      "Using cached ml_dtypes-0.5.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.7 MB)\n",
+      "Using cached tensorboard-2.19.0-py3-none-any.whl (5.5 MB)\n",
+      "Installing collected packages: ml-dtypes, tensorboard, tensorflow, tf-keras\n",
       "  Attempting uninstall: ml-dtypes\n",
       "    Found existing installation: ml-dtypes 0.4.1\n",
       "    Uninstalling ml-dtypes-0.4.1:\n",
@@ -351,7 +351,9 @@
   {
    "cell_type": "markdown",
    "id": "c20e804b-cef8-423c-8483-205fdd120d2a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Train Model"
    ]
@@ -359,9 +361,7 @@
   {
    "cell_type": "markdown",
    "id": "d241c466-0de7-4fdc-8b40-3d7787116c4c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Pre-reqs"
    ]
@@ -392,7 +392,7 @@
       "Requirement already satisfied: Pillow>=1.1.6 in /opt/conda/lib/python3.11/site-packages (from neptune>=1.0) (10.4.0)\n",
       "Requirement already satisfied: PyJWT in /opt/conda/lib/python3.11/site-packages (from neptune>=1.0) (2.9.0)\n",
       "Collecting boto3>=1.28.0 (from neptune>=1.0)\n",
-      "  Downloading boto3-1.38.22-py3-none-any.whl.metadata (6.6 kB)\n",
+      "  Using cached boto3-1.38.23-py3-none-any.whl.metadata (6.6 kB)\n",
       "Collecting bravado<12.0.0,>=11.0.0 (from neptune>=1.0)\n",
       "  Using cached bravado-11.1.0-py2.py3-none-any.whl.metadata (6.0 kB)\n",
       "Requirement already satisfied: click>=7.0 in /opt/conda/lib/python3.11/site-packages (from neptune>=1.0) (8.1.7)\n",
@@ -409,12 +409,12 @@
       "Requirement already satisfied: typing-extensions>=3.10.0 in /opt/conda/lib/python3.11/site-packages (from neptune>=1.0) (4.12.2)\n",
       "Requirement already satisfied: urllib3 in /opt/conda/lib/python3.11/site-packages (from neptune>=1.0) (2.2.3)\n",
       "Requirement already satisfied: websocket-client!=1.0.0,>=0.35.0 in /opt/conda/lib/python3.11/site-packages (from neptune>=1.0) (1.8.0)\n",
-      "Collecting botocore<1.39.0,>=1.38.22 (from boto3>=1.28.0->neptune>=1.0)\n",
-      "  Downloading botocore-1.38.22-py3-none-any.whl.metadata (5.7 kB)\n",
+      "Collecting botocore<1.39.0,>=1.38.23 (from boto3>=1.28.0->neptune>=1.0)\n",
+      "  Using cached botocore-1.38.23-py3-none-any.whl.metadata (5.7 kB)\n",
       "Collecting jmespath<2.0.0,>=0.7.1 (from boto3>=1.28.0->neptune>=1.0)\n",
       "  Using cached jmespath-1.0.1-py3-none-any.whl.metadata (7.6 kB)\n",
       "Collecting s3transfer<0.14.0,>=0.13.0 (from boto3>=1.28.0->neptune>=1.0)\n",
-      "  Downloading s3transfer-0.13.0-py3-none-any.whl.metadata (1.7 kB)\n",
+      "  Using cached s3transfer-0.13.0-py3-none-any.whl.metadata (1.7 kB)\n",
       "Collecting bravado-core>=5.16.1 (from bravado<12.0.0,>=11.0.0->neptune>=1.0)\n",
       "  Using cached bravado_core-6.1.1-py2.py3-none-any.whl\n",
       "Collecting monotonic (from bravado<12.0.0,>=11.0.0->neptune>=1.0)\n",
@@ -449,17 +449,16 @@
       "Requirement already satisfied: arrow>=0.15.0 in /opt/conda/lib/python3.11/site-packages (from isoduration->jsonschema[format-nongpl]>=2.5.1->bravado-core>=5.16.1->bravado<12.0.0,>=11.0.0->neptune>=1.0) (1.3.0)\n",
       "Requirement already satisfied: types-python-dateutil>=2.8.10 in /opt/conda/lib/python3.11/site-packages (from arrow>=0.15.0->isoduration->jsonschema[format-nongpl]>=2.5.1->bravado-core>=5.16.1->bravado<12.0.0,>=11.0.0->neptune>=1.0) (2.9.0.20241003)\n",
       "Using cached neptune-1.14.0-py3-none-any.whl (487 kB)\n",
-      "Downloading boto3-1.38.22-py3-none-any.whl (139 kB)\n",
+      "Using cached boto3-1.38.23-py3-none-any.whl (139 kB)\n",
       "Using cached bravado-11.1.0-py2.py3-none-any.whl (37 kB)\n",
       "Using cached swagger_spec_validator-3.0.4-py2.py3-none-any.whl (28 kB)\n",
-      "Downloading botocore-1.38.22-py3-none-any.whl (13.6 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.6/13.6 MB\u001b[0m \u001b[31m110.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hUsing cached jmespath-1.0.1-py3-none-any.whl (20 kB)\n",
-      "Downloading s3transfer-0.13.0-py3-none-any.whl (85 kB)\n",
+      "Using cached botocore-1.38.23-py3-none-any.whl (13.6 MB)\n",
+      "Using cached jmespath-1.0.1-py3-none-any.whl (20 kB)\n",
+      "Using cached s3transfer-0.13.0-py3-none-any.whl (85 kB)\n",
       "Using cached monotonic-1.6-py2.py3-none-any.whl (8.2 kB)\n",
       "Using cached jsonref-1.1.0-py3-none-any.whl (9.4 kB)\n",
       "Installing collected packages: monotonic, jsonref, jmespath, botocore, s3transfer, swagger-spec-validator, boto3, bravado-core, bravado, neptune\n",
-      "Successfully installed boto3-1.38.22 botocore-1.38.22 bravado-11.1.0 bravado-core-6.1.1 jmespath-1.0.1 jsonref-1.1.0 monotonic-1.6 neptune-1.14.0 s3transfer-0.13.0 swagger-spec-validator-3.0.4\n"
+      "Successfully installed boto3-1.38.23 botocore-1.38.23 bravado-11.1.0 bravado-core-6.1.1 jmespath-1.0.1 jsonref-1.1.0 monotonic-1.6 neptune-1.14.0 s3transfer-0.13.0 swagger-spec-validator-3.0.4\n"
      ]
     }
    ],
@@ -470,7 +469,9 @@
   {
    "cell_type": "markdown",
    "id": "69894ceb-ea2e-477e-803d-2f1fd7784964",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Train a model for embeddings"
    ]
@@ -843,7 +844,9 @@
   {
    "cell_type": "markdown",
    "id": "268addd5-bc7f-44a3-9374-d35f82fc7d28",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Testing.. to be deleted later"
    ]
@@ -1342,8 +1345,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "60e3a233-3319-4e28-a6ce-c9bc7d93d20f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Loaded 1000000 client_ids, embeddings shape: (1000000, 1034)\n",
+      "✅ Loaded 1000000 relevant_clients\n",
+      "✅ Embedding client_ids perfectly match relevant_clients.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "def validate_embeddings_and_clients(embeddings_dir, relevant_clients_path):\n",
+    "    # Load files\n",
+    "    client_ids_path = os.path.join(embeddings_dir, \"client_ids.npy\")\n",
+    "    embeddings_path = os.path.join(embeddings_dir, \"embeddings.npy\")\n",
+    "\n",
+    "    if not os.path.exists(client_ids_path):\n",
+    "        print(f\"❌ File not found: {client_ids_path}\")\n",
+    "        return\n",
+    "    if not os.path.exists(embeddings_path):\n",
+    "        print(f\"❌ File not found: {embeddings_path}\")\n",
+    "        return\n",
+    "    if not os.path.exists(relevant_clients_path):\n",
+    "        print(f\"❌ File not found: {relevant_clients_path}\")\n",
+    "        return\n",
+    "\n",
+    "    client_ids = np.load(client_ids_path)\n",
+    "    embeddings = np.load(embeddings_path)\n",
+    "    relevant_clients = np.load(relevant_clients_path)\n",
+    "\n",
+    "    print(f\"✅ Loaded {len(client_ids)} client_ids, embeddings shape: {embeddings.shape}\")\n",
+    "    print(f\"✅ Loaded {len(relevant_clients)} relevant_clients\")\n",
+    "\n",
+    "    # Check 1: Length match\n",
+    "    if len(client_ids) != len(embeddings):\n",
+    "        print(\"❌ Mismatch: client_ids and embeddings have different lengths!\")\n",
+    "        return\n",
+    "\n",
+    "    # Check 2: Duplicate IDs\n",
+    "    if len(set(client_ids)) != len(client_ids):\n",
+    "        print(\"❌ Duplicate entries found in client_ids.npy!\")\n",
+    "        return\n",
+    "\n",
+    "    # Check 3: Exact match with relevant_clients\n",
+    "    client_ids_set = set(client_ids.tolist())\n",
+    "    relevant_clients_set = set(relevant_clients.tolist())\n",
+    "\n",
+    "    extra = client_ids_set - relevant_clients_set\n",
+    "    missing = relevant_clients_set - client_ids_set\n",
+    "\n",
+    "    if extra:\n",
+    "        print(f\"❌ Extra client_ids not in relevant_clients: {sorted(list(extra))[:5]} ...\")\n",
+    "    if missing:\n",
+    "        print(f\"❌ Missing client_ids from relevant_clients: {sorted(list(missing))[:5]} ...\")\n",
+    "\n",
+    "    if not extra and not missing:\n",
+    "        print(\"✅ Embedding client_ids perfectly match relevant_clients.\")\n",
+    "    else:\n",
+    "        print(\"❌ Validation failed: mismatch between embedding client_ids and relevant_clients.\")\n",
+    "\n",
+    "# Example usage: fill in your actual paths\n",
+    "validate_embeddings_and_clients(\n",
+    "    embeddings_dir=\"/home/jovyan/lectures/194.035-2025S/project/Group_36/embeddings_contrastive_sbert\",  # contains embeddings.npy and client_ids.npy\n",
+    "    relevant_clients_path=\"/home/jovyan/shared/194.035-2025S/data/group_project/data/input/relevant_clients.npy\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ca51c34-e786-4e7c-8049-49963e3b7561",
    "metadata": {},
    "outputs": [],
    "source": []
