--- a/first_try.ipynb
+++ b/first_try.ipynb
@@ -2342,7 +2342,9 @@
    "id": "f3e808a5-d9f1-4bf1-92e5-bb7122d29eed",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "python -m custom_pipline.create_embeddings --data-dir /home/jovyan/groups/194.035-2025S/Group_36/Group_36/data/ --embeddings-dir /home/jovyan/groups/194.035-2025S/Group_36/Group_36/embeddings_th_durationandcount"
+   ]
   }
  ],
  "metadata": {
