add price stats and fix inf issue with InteractionDurationCalculator

--- a/first_try.ipynb
+++ b/first_try.ipynb
@@ -2345,6 +2345,16 @@
    "source": [
     "python -m custom_pipline.create_embeddings --data-dir /home/jovyan/groups/194.035-2025S/Group_36/Group_36/data/ --embeddings-dir /home/jovyan/groups/194.035-2025S/Group_36/Group_36/embeddings_th_durationandcount"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d7770f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python -m validator.run --data-dir /home/jovyan/groups/194.035-2025S/Group_36/Group_36/data --embeddings-dir /home/jovyan/groups/194.035-2025S/Group_36/Group_36/embeddings_th_durationandcount/"
+   ]
   }
  ],
  "metadata": {
