analyze embeddings issue in first_try_file

--- a/first_try.ipynb
+++ b/first_try.ipynb
@@ -2355,6 +2355,32 @@
    "source": [
     "python -m validator.run --data-dir /home/jovyan/groups/194.035-2025S/Group_36/Group_36/data --embeddings-dir /home/jovyan/groups/194.035-2025S/Group_36/Group_36/embeddings_th_durationandcount/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b8f4d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "rel_clients = np.load(\"/home/jovyan/groups/194.035-2025S/Group_36/Group_36/embeddings_th_durationandcount/embeddings.npy\")\n",
+    "df = pd.DataFrame(rel_clients)\n",
+    "\n",
+    "inf_mask = np.isinf(df)\n",
+    "\n",
+    "# Find rows and columns that contain inf\n",
+    "rows_with_inf = inf_mask.any(axis=1)\n",
+    "cols_with_inf = inf_mask.any(axis=0)\n",
+    "\n",
+    "# Filter to show only affected rows and columns\n",
+    "df_inf_only = df.loc[rows_with_inf, cols_with_inf]\n",
+    "\n",
+    "# Show result\n",
+    "print(df_inf_only)\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
