Update first_try for new dataset

--- a/first_try.ipynb
+++ b/first_try.ipynb
@@ -2381,6 +2381,60 @@
     "print(df_inf_only)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "582633fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Set your data directory path here\n",
+    "#data_dir = \"/home/jovyan/shared/194.035-2025S/data/group_project/data/input\"\n",
+    "data_dir = \"/home/jovyan/groups/194.035-2025S/Group_36/Group_36/data\"\n",
+    "# List of event parquet filenames — adjust if needed\n",
+    "event_files = [\n",
+    "    \"product_buy.parquet\",\n",
+    "    \"add_to_cart.parquet\",\n",
+    "    \"remove_from_cart.parquet\",\n",
+    "    \"page_visit.parquet\",\n",
+    "    \"search_query.parquet\"\n",
+    "]\n",
+    "relevant_client_files = \"relevant_clients.npy\"\n",
+    "\n",
+    "rel_clients = np.load(os.path.join(data_dir+\"/input\", relevant_client_files))\n",
+    "\n",
+    "print(\"Relevant Clients: \")\n",
+    "\n",
+    "print(f\"Relevant Client IDs: {rel_clients}\")\n",
+    "print(f\"Number of relevant clients: {len(rel_clients)}\")\n",
+    "\n",
+    "client_id_summary = []\n",
+    "for file_name in event_files:\n",
+    "    file_path = os.path.join(data_dir, file_name)\n",
+    "    if not os.path.isfile(file_path):\n",
+    "        print(f\"File not found: {file_path}\")\n",
+    "        continue\n",
+    "    \n",
+    "    print(f\"\\n=== Inspecting {file_name} ===\")\n",
+    "    \n",
+    "    df = pd.read_parquet(file_path)\n",
+    "    client_id_summary.append(df['client_id'].unique())  \n",
+    "    print(f\"Number of rows: {len(df['client_id'].unique())}\")\n",
+    "    #print(\"Columns:\", df.columns.tolist())\n",
+    "\n",
+    "\n",
+    "all_client_ids = np.concatenate(client_id_summary)\n",
+    "unique_client_ids = np.unique(all_client_ids)\n",
+    "print(f\"Number of unique client ids in files combined: {len(unique_client_ids)}\")\n",
+    "\n",
+    "common_clients = np.intersect1d(unique_client_ids, rel_clients)\n",
+    "print(f\"Clients in relevant client list: {len(common_clients)}\")"
+   ]
   }
  ],
  "metadata": {
