disable previous loading, disable lr scheduling for now

--- a/Rec-Sys-Challenge-Github-Repo/run_autoencoder.ipynb
+++ b/Rec-Sys-Challenge-Github-Repo/run_autoencoder.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "6036941f-69e9-4b79-90d4-4a5dd8770965",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import autoencoder_pipeline\n"
@@ -12,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f05238c1-ae66-4c15-ac17-43ecfd122593",
    "metadata": {
     "editable": true,
@@ -28,133 +34,23 @@
      "text": [
       "\n",
       " Loading and pre-processing data...\n",
+      "USING INPUT DATA FOLDER: /home/jovyan/shared/194.035-2025S/data/group_project/data_new/\n",
+      "USING CLIENT IDS PATH: /home/jovyan/shared/194.035-2025S/data/group_project/data_new/input/relevant_clients.npy\n",
       "  - Loading product_buy.parquet...\n",
       "  - Loading add_to_cart.parquet...\n",
       "  - Loading search_query.parquet...\n",
+      "  - Loading page_visit.parquet...\n",
       "  - Merged product properties with buy and cart events.\n",
       "\n",
       " Aggregating features\n",
-      "  - Generating features for event type: product_buy...\n"
+      "  - generating features for event type: product_buy...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 510971/510971 [41:04<00:00, 207.37it/s]  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - Generating features for event type: add_to_cart...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 557093/557093 [17:02<00:00, 544.81it/s]  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - Generating features for event type: search_query...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 343440/343440 [02:01<00:00, 2820.11it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " Postprocessing steps like aligning, scaling\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 793783/793783 [00:03<00:00, 206703.03it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - Generated raw features of shape: (793783, 201)\n",
-      "  - Final scaled feature matrix shape: (1000000, 201)\n",
-      "\n",
-      " Training the Autoencoder...\n",
-      "  - Using device: cuda\n",
-      "  - Epoch [1/50], Loss: 0.004637\n",
-      "  - Epoch [2/50], Loss: 0.000639\n",
-      "  - Epoch [3/50], Loss: 0.000540\n",
-      "  - Epoch [4/50], Loss: 0.000487\n",
-      "  - Epoch [5/50], Loss: 0.000451\n",
-      "  - Epoch [6/50], Loss: 0.000426\n",
-      "  - Epoch [7/50], Loss: 0.000406\n",
-      "  - Epoch [8/50], Loss: 0.000391\n",
-      "  - Epoch [9/50], Loss: 0.000377\n",
-      "  - Epoch [10/50], Loss: 0.000363\n",
-      "  - Epoch [11/50], Loss: 0.000353\n",
-      "  - Epoch [12/50], Loss: 0.000342\n",
-      "  - Epoch [13/50], Loss: 0.000335\n",
-      "  - Epoch [14/50], Loss: 0.000326\n",
-      "  - Epoch [15/50], Loss: 0.000320\n",
-      "  - Epoch [16/50], Loss: 0.000315\n",
-      "  - Epoch [17/50], Loss: 0.000309\n",
-      "  - Epoch [18/50], Loss: 0.000306\n",
-      "  - Epoch [19/50], Loss: 0.000301\n",
-      "  - Epoch [20/50], Loss: 0.000294\n",
-      "  - Epoch [21/50], Loss: 0.000289\n",
-      "  - Epoch [22/50], Loss: 0.000286\n",
-      "  - Epoch [23/50], Loss: 0.000281\n",
-      "  - Epoch [24/50], Loss: 0.000275\n",
-      "  - Epoch [25/50], Loss: 0.000270\n",
-      "  - Epoch [26/50], Loss: 0.000267\n",
-      "  - Epoch [27/50], Loss: 0.000264\n",
-      "  - Epoch [28/50], Loss: 0.000260\n",
-      "  - Epoch [29/50], Loss: 0.000258\n",
-      "  - Epoch [30/50], Loss: 0.000257\n",
-      "  - Epoch [31/50], Loss: 0.000254\n",
-      "  - Epoch [32/50], Loss: 0.000251\n",
-      "  - Epoch [33/50], Loss: 0.000249\n",
-      "  - Epoch [34/50], Loss: 0.000246\n",
-      "  - Epoch [35/50], Loss: 0.000242\n",
-      "  - Epoch [36/50], Loss: 0.000241\n",
-      "  - Epoch [37/50], Loss: 0.000238\n",
-      "  - Epoch [38/50], Loss: 0.000235\n",
-      "  - Epoch [39/50], Loss: 0.000233\n",
-      "  - Epoch [40/50], Loss: 0.000231\n",
-      "  - Epoch [41/50], Loss: 0.000228\n",
-      "  - Epoch [42/50], Loss: 0.000227\n",
-      "  - Epoch [43/50], Loss: 0.000225\n",
-      "  - Epoch [44/50], Loss: 0.000221\n",
-      "  - Epoch [45/50], Loss: 0.000219\n",
-      "  - Epoch [46/50], Loss: 0.000217\n",
-      "  - Epoch [47/50], Loss: 0.000216\n",
-      "  - Epoch [48/50], Loss: 0.000214\n",
-      "  - Epoch [49/50], Loss: 0.000213\n",
-      "  - Epoch [50/50], Loss: 0.000212\n",
-      "\n",
-      " Generating final embeddings...\n",
-      "\n",
-      " Saving final embeddings...\n",
-      "SUCCESS!\n",
-      "Embeddings of shape (1000000, 128) saved to:\n",
-      "output_new/embeddings.npy\n",
-      "Client IDs of shape (1000000,) saved to:\n",
-      "output_new/client_ids.npy\n"
+      "  0%|          | 1129/510971 [00:05<40:38, 209.11it/s]"
      ]
     }
    ],
@@ -234,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "f9934d3e-931c-4a02-bfb3-27f8b717f477",
    "metadata": {},
    "outputs": [
@@ -383,8 +279,7 @@
     }
    ],
    "source": [
-    "python -m training_pipeline.train --data-dir /home/jovyan/shared/194.035-2025S/data/group_project/data --embeddings-dir /home/jovyan/repo_checkout/Group_36/Rec-Sys-Challenge-Github-Repo/output --tasks churn propensity_category propensity_sku --log-name exp_20250401 --accelerator gpu --devices auto --disable-relevant-clients\n",
-    "-check --score-dir /home/jovyan/repo_checkout/Group_36/scores --neptune-project /home/jovyan/groups/194.035-2025S/Group_36/Group_36/neptune"
+    "python -m training_pipeline.train --data-dir /home/jovyan/shared/194.035-2025S/data/group_project/data_new --embeddings-dir /home/jovyan/repo_checkout/Group_36/Rec-Sys-Challenge-Github-Repo/output_new --tasks churn propensity_category propensity_sku --log-name exp_20250401 --accelerator gpu --devices auto --disable-relevant-clients-check --score-dir /home/jovyan/repo_checkout/Group_36/scores --neptune-project /home/jovyan/groups/194.035-2025S/Group_36/Group_36/neptune"
    ]
   },
   {
